--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,10 +32,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew build sonar --info \
-          -Dsonar.projectKey=advprog-2026-A18-project_Manajemen-Hasil-Panen-Sawit \
-          -Dsonar.organization=advprog-2026-a18-project \
-          -Dsonar.host.url=https://sonarcloud.io/
+        run: ./gradlew build sonar --info -D sonar.projectKey=advprog-2026-A18-project_Manajemen-Hasil-Panen-Sawit -D sonar.organization=advprog-2026-a18-project -D sonar.host.url=https://sonarcloud.io/
 
   Continuous-Deployment:
     needs: Continuous-Integration
